--- a/env-dev.yml
+++ b/env-dev.yml
@@ -3,7 +3,7 @@ channels:
   - https://conda.anaconda.org/conda-forge
   - defaults
 dependencies:
-  - python=3.6 # match the version of OpenNMT-transformer 
+  - python>=3.8,<3.10
   - graphviz>=2.38,<3.0
   - rdkit=>2019.09.1
   - poetry>=1.1.4,<2.0
