--- a/env-users.yml
+++ b/env-users.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - python=3.6 # for usage with OpenNMT transformer
   - graphviz>=2.38,<3.0
-  - rdkit=2019.09.1
+  - rdkit>=2019.09.1
   - pytables>=3.7.0,<4.0.0
   - pip>=20.0 
   - pip:
